# wordpress-sync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  uninstall.sh  wordpress_sync.py
cli/: install.sh  pyproject.toml  wordpress_sync.py
cli/config/: config.yaml.sample
cli/resources/: database_manager.py  maintenance_manager.py  plugin_manager.py  ssh_manager.py  validation_manager.py
cli/staging_etc/mu-plugins/: admin-bar-color-for-staging.php
config/: config.yaml.sample
gui/: package-lock.json  package.json
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json  shell.json
gui/src-tauri/src/: lib.rs
gui/src/components/: AddSiteDialog.svelte  CliSetupBanner.svelte  Sidebar.svelte  StatusBadge.svelte  TagInput.svelte  TerminalPanel.svelte
gui/src/components/config/: CollapsibleSection.svelte  RawYamlEditor.svelte  SectionBackup.svelte  SectionDomains.svelte  SectionOperation.svelte  SectionOwnership.svelte  SectionPaths.svelte  SectionPlugins.svelte  SectionRsync.svelte  SectionSSH.svelte  SectionValidation.svelte
gui/src/components/history/: LogViewer.svelte
gui/src/components/sync/: ConfirmDialog.svelte  DiffViewer.svelte  LogOutput.svelte  (+1 more)
gui/src/routes/: +page.svelte
gui/src/views/: BackupManager.svelte  CommandPreview.svelte  Dashboard.svelte  HealthCheck.svelte  History.svelte  Settings.svelte  SiteConfig.svelte  SyncPanel.svelte
resources/: __init__.py  command_collector.py  config_manager.py  database_manager.py  password_manager.py  ssh_manager.py  url_manager.py
(+19 files in other folders)
