[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordpress-sync"
version = "2.0.0"
description = "Synchronize WordPress between staging and live environments"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.scripts]
wordpress-sync = "wordpress_sync:main"

[tool.setuptools]
py-modules = ["wordpress_sync"]

[tool.setuptools.packages.find]
include = ["resources*"]
